# VLN-humanoid

./: .gitignore  README.md
H1_high_level_isaac_sim/: .gitignore  README.md  main.py  requirements.txt
H1_high_level_isaac_sim/images/: depth.npy
H1_high_level_isaac_sim/src/: logger.py
H1_high_level_isaac_sim/src/VLM_agent/: OwlViT_FastSAM_SAM.py  agent.py
H1_high_level_isaac_sim/src/execute/: actions.py  move_service_example.py  ros_communication.py  target_pose_finder.py  test.py
H1_high_level_isaac_sim/src/mistral_ai/: llm.py  mistral.py
H1_high_level_isaac_sim/src/mistral_ai/prompts/: plan_prompt.py  vision_prompt.py
H1_high_level_isaac_sim/src/mistral_ai/scripts/: llm_script.json  llm_script.txt  vlm_script.json
H1_high_level_isaac_sim/src/transcribe/: stt.py  transcription.txt  tts.py
H1_high_level_mujoco/: .gitignore  1.main.py  README.md  action_test.py  requirements.txt
H1_high_level_mujoco/src/: utils.py
H1_high_level_mujoco/src/VLM_agent/: OwlViT_FastSAM_SAM.py  agent.py
H1_high_level_mujoco/src/execute/: actions.py
H1_high_level_mujoco/src/mistral_ai/: mistral.py  vlm.py
H1_high_level_mujoco/src/mistral_ai/prompts/: plan_prompt.py  vision_prompt.py
H1_high_level_mujoco/src/transcribe/: stt.py  transcription.txt  tts.py
H1_low_level_Isaac_sim_try/: h1_cfg.py  h1_env_isaac.py  isaac_test.py  run_h1_policy.py  test.py  udp_cmd.py
H1_low_level_Isaac_sim_try/h1_models/meshes/: left_ankle_link.tmp.usd  left_elbow_link.tmp.usd  left_hip_roll_link.tmp.usd  left_shoulder_roll_link.tmp.usd  right_elbow_link.tmp.usd  right_hip_pitch_link.tmp.usd  right_knee_link.tmp.usd  right_shoulder_pitch_link.tmp.usd  torso_link.tmp.usd
H1_low_level_Mujoco/: MUJOCO_LOG.TXT  mpc_follow_trajectory.py  mpc_mujoco.py  send_cmd_example.py  udp_cmd.py  walk_eval.py  walk_train.py
H1_low_level_Mujoco/env/: h1_env.py  h1_gym_wrapper.py
H1_low_level_Mujoco/h1_models/: h1.xml
H1_low_level_Mujoco/h1_models/h1/: h1.usd
H1_low_level_Mujoco/h1_models/h1/configuration/: h1_physics.usd
H1_low_level_Mujoco/h1_models/meshes/: left_hip_pitch_link.tmp.usd  left_hip_yaw_link.tmp.usd  left_knee_link.tmp.usd  left_shoulder_pitch_link.tmp.usd  left_shoulder_yaw_link.tmp.usd  right_ankle_link.tmp.usd  right_hip_roll_link.tmp.usd  right_hip_yaw_link.tmp.usd  right_shoulder_roll_link.tmp.usd  right_shoulder_yaw_link.tmp.usd
H1_low_level_Mujoco/lstm_policy/: custom_policy.py  train_ppo_lstm.py
H1_low_level_Mujoco/wbc/: wbc_solver.py
H1_low_level_isaac_sim/: .gitignore  .gitmodules  README.md  qos.yaml  requirements.txt  vlmaps-desc.md
H1_low_level_isaac_sim/camera_feed/: depth.npy
H1_low_level_isaac_sim/outputs/2025-07-25/20-55-48/.hydra/: hydra.yaml
H1_low_level_isaac_sim/outputs/2025-07-29/21-02-52/.hydra/: config.yaml  hydra.yaml  overrides.yaml
H1_low_level_isaac_sim/outputs/2025-07-29/21-15-16/.hydra/: config.yaml  hydra.yaml  (+1 more)
H1_low_level_isaac_sim/policy/: policy_flat.pt  policy_rough.pt  policy_rough_2.pt  policy_stand.pt  policy_stand_flat.pt  policy_stand_rough.pt
H1_low_level_isaac_sim/scripts/: h1_startup.py  inference_result.txt  isaac_inference_udp.py  isaac_inference_wheeled_robot.py  isaaclab_inference.py
H1_low_level_isaac_sim/scripts/ros/: isaac_publisher.py  isaac_ros_graphs.py
H1_low_level_isaac_sim/scripts/tests/: least_squares.py  rotation_calc.py
H1_low_level_isaac_sim/scripts/utils/: mpc_follow_trajectory.py  observation_monitor.py  pid_control.py  point_cloud.py  simple_trajectory_plot.py
H1_low_level_isaac_sim/scripts/utils/udp/: udp_cmd_client_humanoid.py  udp_cmd_listener.py  udp_cmd_listener_wheeled.py  udp_keyboard_control_humanoid.py  udp_keyboard_control_wheeled.py
H1_low_level_isaac_sim/src/0_common/h1_description/: CMakeLists.txt  package.xml
H1_low_level_isaac_sim/src/0_common/robot_launch/: CMakeLists.txt  package.xml
H1_low_level_isaac_sim/src/0_common/sim_odom_publisher/: CMakeLists.txt  package.xml
H1_low_level_isaac_sim/src/0_common/timer/: CMakeLists.txt  package.xml
H1_low_level_isaac_sim/src/0_common/timer/include/: timer.hpp
H1_low_level_isaac_sim/src/0_common/unitree_h1_hardware_interface/: CMakeLists.txt  h1_interface_controller_plugins.xml  package.xml
H1_low_level_isaac_sim/src/0_common/unitree_h1_hardware_interface/include/unitree_h1_hardware_interface/: motor_crc.h  motor_crc_hg.h  unitree_h1_hardware_interface.hpp
H1_low_level_isaac_sim/src/0_common/unitree_h1_hardware_interface/src/: motor_crc.cpp  motor_crc_hg.cpp  unitree_h1_hardware_interface.cpp
H1_low_level_isaac_sim/src/2_plan/mpc/: CMakeLists.txt  package.xml
H1_low_level_isaac_sim/src/2_plan/mpc/include/: mpc_node.h
H1_low_level_isaac_sim/src/2_plan/mpc/scripts/: generate_solver.sh  srbm_mpc.ipynb  srbm_mpc.py
H1_low_level_isaac_sim/src/2_plan/mpc/scripts/mujoco/: first_mujoco_simulation.py
H1_low_level_isaac_sim/src/2_plan/mpc/scripts/srbm_scripts/: __init__.py  pin_helper.py  plots.py
H1_low_level_isaac_sim/src/2_plan/mpc/scripts/srbm_scripts/srbm_solver/: __init__.py  helper.py  solve_traj.py  solver.py  srbm_model.py
H1_low_level_isaac_sim/src/2_plan/mpc/src/: mpc_node.cpp
H1_low_level_isaac_sim/src/2_plan/mpc_interface/: CMakeLists.txt  package.xml
H1_low_level_isaac_sim/src/2_plan/reference_generator/: CMakeLists.txt  package.xml
H1_low_level_isaac_sim/src/2_plan/reference_generator/include/: reference_generator.hpp  reference_generator_node.h
H1_low_level_isaac_sim/src/2_plan/reference_generator/src/: reference_generator_node.cpp
H1_low_level_isaac_sim/src/3_act/wbc/: CMakeLists.txt  package.xml  wbc_controller_plugins.xml
H1_low_level_isaac_sim/src/3_act/wbc/config/: wbc_params.yaml
H1_low_level_isaac_sim/src/3_act/wbc/include/wbc/: wbc_controller.h  wbc_node.h  whole_body_controller.h
H1_low_level_isaac_sim/src/3_act/wbc/src/: wbc_controller.cpp  wbc_node.cpp  whole_body_controller.cpp
H1_low_level_isaac_sim/src/3_act/wbc/test/: wbc_test.cpp
H1_low_level_isaac_sim/src/3_act/wbc_interface/: CMakeLists.txt  package.xml
H1_low_level_isaac_sim/src/3_act/wbc_interface/msg/: WBCReference.msg
(+85 files in other folders)
