<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>unitree_h1_hardware_interface</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="josua.lindemann@outlook.de">argo</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>eigen</depend>

    <depend>controller_interface</depend>
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>rclcpp_lifecycle</depend>
    <depend>realtime_tools</depend>

    <depend>unitree_hg</depend>
    <depend>unitree_go</depend>

    <!-- <build_depend>generate_parameter_library</build_depend> -->

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
        <controller_interface plugin="${prefix}/h1_interface_controller_plugins.xml"/>
    </export>
</package>
