<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>mpc</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="josua.lindemann@outlook.de">Josua Lindemann</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- dependencies -->
    <depend>rclcpp</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>eigen</depend>
    <depend>mpc_interface</depend>
    <depend>wbc_interface</depend>
    <depend>h1_description</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
